# Game_project_work

./: Initial project idea.md  Nonogram.md  README.md  nonogram interface design.md  read me nonogram.md
Nonogram-release/: rounds.json
NonogramQtGame/: CMakeLists.txt  README.md  gamevalidator.cpp  gamevalidator.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  maze_levels.json  mazeadventurewidget.cpp  mazeadventurewidget.h  minigameswidget.cpp  minigameswidget.h  progressservice.cpp  progressservice.h  round.cpp  round.h  tst_gamevalidator.cpp  tst_gamevalidator.h
